plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.2'
}

group 'com.josemarcellio.joseplugin'
version '1.0.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.codemc.io/repository/maven-releases/' }
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.6'
    compileOnly 'net.luckperms:api:5.4'
    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
    compileOnly 'com.github.retrooper:packetevents-spigot:2.5.0'
    compileOnly ('io.github.fabiozumbi12.RedProtect:RedProtect-Spigot:8.1.2') {
        exclude group: '*'
    }
    compileOnly ('io.github.fabiozumbi12.RedProtect:RedProtect-Core:8.1.2') {
        exclude group: '*'
    }
    implementation 'org.bstats:bstats-bukkit:3.0.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

shadowJar {
    archiveFileName = "JosePlugin.jar"
    relocate 'org.bstats', 'com.josemarcellio.joseplugin.bstats'
}